# arber

./: .gitignore  AGENTS.md  CLAUDE.md  Human_Inquiry_Orchestration_Addendum.docx  KICKOFF_PROMPTS.md  Makefile  STATUS.md  code_review.md  docker-compose.yml  pyproject.toml
.claude/skills/: ops-chat.md
backend/: main.py
backend/config/: settings.py
backend/core/: auth.py  execution_mode.py  kill_switch.py  middleware.py  outbox.py  trace.py
backend/db/: session.py
backend/models/: __init__.py  base.py  content.py  core.py  execution.py  extensions.py  feedback.py  forecasting.py  inquiry.py  ops.py  ops_chat.py  research.py  sources.py
backend/prompts/: templates.py
backend/schemas/: common.py  events.py  execution.py  extensions.py  feedback.py  forecasting.py  inquiry.py  markets.py  ops_chat.py  prompts.py  research.py  sources.py
backend/services/: decision.py  execution.py  exit_engine.py  forecast.py  ingest.py  inquiry.py  inquiry_signal.py  ops_chat.py  outcome_builder.py  postmortem.py  prompt_bridge.py  replay.py  research.py  watch_planner.py
backend/templates/: inquiry.html
backend/workers/: cli.py  (+1 more)
docs/: DATA_ANALYSIS_FOR_REVIEW.md  JP_EQUITY_DESIGN_DECISION.md  PAPER_TRADING_READINESS_QUESTIONS.md  PROMPT_REFINEMENT_REQUEST.md  VENDOR_DECISION_REQUEST.md
human_inquiry_addendum/: README.md
ops_chat_copilot_addendum_pack/: README.md
prompt_refinement_pack_v1/: DESIGN_REVIEW_SUMMARY.md  README.md
prompts/: README.md
research_scout_addendum_pack/: README.md
specification/: README.md  manifest.txt
tests/: conftest.py
(+200 files in other folders)
